Ship production ARDI Security workspace
